@@ -66,7 +66,8 @@
  float:left;
 }
 
-.subtoolbar-cover {
+.subtoolbar-cover,
+.subtoolbar-cover-full {
  position:fixed;
  top:var(--main-toolbar-height);
  width:100vw;
