@@ -22,6 +22,8 @@ dev
 18. Only show detailed sub-toolbar if window is at least 400px tall.
 19. Allow using detailed sub-toolbar for playlists, if playlist image support
     is enabled.
+20. If showing detailed sub-toolbar and view is too narrow for image then show
+    unblurred image as toolbar background.
 
 5.11.5
 ------
